name:                ytcasts2
version:             0.1.0.0
synopsis:            youtube channel "casts" downloading tool
description:         Please see README.md
homepage:            https://github.com/justinwoo/ytcasts2#readme
license:             MIT
license-file:        LICENSE
author:              justinwoo
maintainer:          moomoowoo@gmail.com
copyright:           2016 Justin Woo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11
                     , transformers >= 0.5
                     , sqlite-simple
                     , bytestring >= 0.10
                     , tagsoup
                     , process >= 1.4
                     , http-conduit
                     , utf8-string
  default-language:    Haskell2010

executable ytcasts2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ytcasts2
  default-language:    Haskell2010

test-suite ytcasts2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ytcasts2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justinwoo/ytcasts2
